# flightsync-light

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/desktop/: eslint.config.js  index.html  package.json  test-pdf.mjs  vite.config.js  vitest.config.js
apps/desktop/adapters/: pdf-text-webkit.js
apps/desktop/public/: fonts.css
apps/desktop/src/: App.css  App.jsx  config.example.js  main.jsx  test-setup.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/__tests__/: App.auto-backup.test.jsx  App.dayPanelSave.test.jsx  App.folder-backup.test.jsx  App.mobile-shell.test.jsx  App.restore-offer.test.jsx  lazy-pdf-adapter.test.js  pdf-text-adapter.test.js
apps/desktop/src/components/: BoardingPassModal.jsx  ConfirmModal.jsx  DayPanel.jsx  ErrorBoundary.jsx  Icons.jsx  MobileHomeMenu.jsx  MobileSectionHeader.jsx  OFPModal.jsx  PdfDropZone.jsx  PdfImportCard.jsx  ReconciliationModal.jsx
apps/desktop/src/components/__tests__/: ConfirmModal.test.jsx  DayPanel.test.jsx  ErrorBoundary.test.jsx  MobileHomeMenu.test.jsx  OFPModal.test.jsx  (+2 more)
apps/desktop/src/navigation/: sections.js
apps/desktop/src/utils/: archiveStore.js  archiveView.js  cloudAuth.js  driveArchive.js  driveBackup.js  exportEscape.js  folderBackup.js  icsExport.js  importValidation.js  preventStrayDrops.js  rescoreOfps.js  residence.js  useIsMobile.js  useMobileNav.js
docs/: _config.yml  confidentialite.md  index.md
(+28 files in other folders)
