[package]
name = "app"
version = "0.3.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
keyring = { version = "3", features = ["apple-native"] }
url = "2"

# Release profile tuned for binary size. The shipped Android .so was ~20 MB
# unstripped (5.4 MB of symbol tables) because cargo's defaults applied. The app
# logic lives in the JS webview, so the Rust shell can optimize for size with no
# meaningful runtime cost.
[profile.release]
strip = "symbols"   # drop the ~5.4 MB symbol/debug tables
lto = true          # cross-crate inlining + dead-code elimination
codegen-units = 1   # better optimization (slower build)
opt-level = "s"     # optimize for size
panic = "abort"     # no unwind tables
